add http handler for delete requests
